--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/cheerio": "^0.17.31",
-    "@types/request": "0.0.39",
+    "@types/request": "^0.0.39",
     "cheerio": "^0.22.0",
     "request": "^2.79.0"
   }
