--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bluebird": "^3.5.18",
     "@types/cheerio": "^0.17.31",
     "@types/documentdb": "^1.10.3",
+    "@types/mongoose": "^4.7.28",
     "@types/node": "^8.0.53",
     "@types/request": "^0.0.39",
-    "bluebird": "^3.5.1",
+    "@types/request-promise": "^4.1.39",
     "cheerio": "^0.22.0",
     "documentdb": "^1.14.1",
-    "request": "^2.79.0"
+    "moment": "^2.19.2",
+    "mongoose": "^4.13.4",
+    "request": "^2.79.0",
+    "request-promise": "^4.2.2"
   }
 }
