converted scraper to azure function

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,14 @@
             "cwd": "${workspaceRoot}",
             "outFiles": [],
             "preLaunchTask": "tsc: build - tsconfig.json"
+        },
+        {
+            "name": "Attach to JavaScript Functions",
+            "type": "node",
+            "request": "attach",
+            "port": 5858,
+            "protocol": "inspector",
+            "preLaunchTask": "runFunctionsHost"
         }
     ]
 }
