--- a/AzFunctions/ScrapeAvailableCats/package.json
+++ b/AzFunctions/ScrapeAvailableCats/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.17.31",
     "@types/documentdb": "^1.10.3",
+    "@types/dotenv": "^4.0.2",
     "@types/mongoose": "^4.7.28",
     "@types/node": "^8.0.53",
     "@types/request": "^0.0.39",
@@ -21,6 +22,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "documentdb": "^1.14.1",
+    "dotenv": "^5.0.1",
     "mongoose": "^4.13.4",
     "request": "^2.79.0",
     "request-promise": "^4.2.2"
